fixed switch method to work for all java versions